<resources>
    <string name="app_name">KSTOREDEMO</string>
    <string name="start">START</string>
    <string name="quit">Quit</string>
    <string name="settings">Settings</string>
    <string name="services">SERVICES</string>
    <string name="sabari">SABARI</string>
    <string name="rc_no">RC NO.</string>
    <string name="aadhaar">AADHAAR</string>
    <string name="back">Back</string>
    <string name="authencation">AUTHENCATION</string>
    <string name="card_details">Card Details</string>
    <string name="rc_no1">RC No.</string>
    <string name="member_name">Member Name</string>
    <string name="uid">UID</string>
    <string name="name">Name</string>
    <string name="scan_fp">Scan-FP</string>
    <string name="price">PRICE</string>
    <string name="qty">QTY</string>
    <string name="total">TOTAL</string>
    <string name="total1">TOTAL</string>
    <string name="sabari_products">SABARI PRODUCTS</string>
    <string name="print">PRINT</string>
    <string name="mrp">MRP</string>
    <string name="total2">TOTAL</string>
    <string name="maveli_store">MAVELI STORE</string>
</resources>