<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".ProductsList">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:text="@string/sabari_products"
        android:textColor="@color/blue"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="serif"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:background="@color/gray"
            android:text="ITEM NAME"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="serif"
            android:gravity="center"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@color/gray"
            android:text="@string/qty"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="serif"
            android:gravity="center"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@color/gray"
            android:text="@string/mrp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="serif"
            android:gravity="center"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:background="@color/gray"
            android:text="@string/total1"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="serif"
            android:gravity="center"
            android:textColor="@color/black"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:id="@+id/sabarilistrecyclerview"
        android:background="@color/orange">
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_weight="5">

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/sabariBack"
        android:text="BACK"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_weight="1"
        android:background="@drawable/backbutton"
        android:fontFamily="serif"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/total2"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="serif"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/sabariItemTotal"
            android:textSize="18sp"
            android:gravity="center"
            android:editable="false"
            android:text="0"
            android:background="@drawable/totaledittext"
            android:textColor="@color/white"
            android:layout_weight="1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/sabariPrint"
        android:text="@string/print"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_weight="1"
        android:fontFamily="serif"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/nextbutton"
        />
    </LinearLayout>
  </LinearLayout>