<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".MainActivity">

   <TextView
       android:id="@+id/headingf"
       android:layout_width="match_parent"
       android:layout_height="40dp"
       android:gravity="center"
       android:text="@string/maveli_store"
       android:textSize="24sp"
       android:fontFamily="serif"
       android:background="@color/white"
       android:textColor="@color/orange"
       android:textStyle="bold" />

   <LinearLayout
       android:id="@+id/linearout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/headingf"
       android:orientation="horizontal">

      <TextView
          android:id="@+id/version"
          android:layout_width="120dp"
          android:layout_height="30dp"
          android:layout_marginStart="5dp"
          android:layout_marginTop="30dp"
          android:fontFamily="serif"
          android:text="Version-1.0"
          android:textColor="@color/white"
          android:textSize="22sp"
          android:textStyle="italic" />

      <TextView
          android:id="@+id/datetext"
          android:layout_width="120dp"
          android:layout_height="30dp"
          android:layout_marginStart="5dp"
          android:layout_marginTop="30dp"
          android:fontFamily="serif"
          android:textColor="@color/white"
          android:textSize="22sp"
          android:textStyle="italic" />

      <TextView
          android:id="@+id/timetext"
          android:layout_width="120dp"
          android:layout_height="30dp"
          android:layout_marginStart="5dp"
          android:layout_marginTop="30dp"
          android:textColor="@color/white"
          android:fontFamily="serif"
          android:textSize="22sp"
          android:textStyle="italic" />
   </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center_horizontal"
       android:layout_marginTop="130dp"
       android:id="@+id/ll2">

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/btnstart"
          android:layout_width="200dp"
          android:layout_height="70dp"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/startbutton"
          android:fontFamily="serif"
          android:gravity="center"
          android:text="@string/start"
          android:textColor="@color/white"
          android:textSize="45sp"
          android:textStyle="bold" />
   </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/btnstart"
       android:gravity="center_horizontal"
       android:weightSum="2"
       android:orientation="horizontal">

      <Button
          android:id="@+id/btnQuit"
          android:layout_width="0dp"
          android:layout_height="60dp"
          android:layout_marginTop="100dp"
          android:layout_weight="1"
          android:backgroundTint="#800000"
          android:gravity="center"
          android:textStyle="bold"
          android:layout_marginHorizontal="10dp"
          android:fontFamily="serif"
          android:text="@string/quit"
          android:textSize="24sp" />

      <Button
          android:id="@+id/btnSettings"
          android:layout_width="0dp"
          android:layout_height="60dp"
          android:layout_marginTop="100dp"
          android:layout_weight="1"
          android:backgroundTint="#FFFF00"
          android:text="@string/settings"
          android:fontFamily="serif"
          android:layout_marginHorizontal="10dp"
          android:textColor="@color/black"
          android:textStyle="bold"
          android:textSize="24sp" />
   </LinearLayout>
</LinearLayout>